Tests/RunCMake/CMakePresets/InvalidPresetGenerator-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/InvalidPresetGenerator:
Error: @6,20: "generator" expected a string
      "generator": \[\],
                   \^$
